--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
 
         <div id="menu-songlist" class="menu ease-p3 menu-hide">
             <span class="header">
-                <!-- <span class="btn left">收藏全部</span> -->
                 <span class="btn left btn-addSong">添加歌曲</span>
                 <span class="center">播放列表(<span class="count inline">0</span>)</span>
                 <span class="btn right">清空</span>
@@ -346,6 +345,7 @@
 
     <script src="js/attachNodeToElement.js"></script>
     <script src="js/attachDOMElementEvents.js"></script>
+    <script src="js/audio-visualize.js"></script>
     <script src="js/app.js"></script>
     <script src="js/time-range.js"></script>
     <script src="js/file-load.js"></script>
