Project: rename files

--- a/index.html
+++ b/index.html
@@ -339,17 +339,17 @@
 
     <script src="js/lib/underscore-min.js"></script>
 
-    <script src="js/cross-browser.js"></script>
+    <script src="js/crossBrowser.js"></script>
     <script src="js/$getter.js"></script>
     <script src="js/globalNamespace.js"></script>
 
-    <script src="js/attachNodeToElement.js"></script>
-    <script src="js/attachDOMElementEvents.js"></script>
-    <script src="js/audio-visualize.js"></script>
+    <script src="js/addNode.js"></script>
+    <script src="js/attachEvents.js"></script>
+    <script src="js/audioVisualize.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/time-range.js"></script>
-    <script src="js/file-load.js"></script>
-    <script src="js/drag.js"></script>
-    <script src="js/debug-shorthand.js"></script>
+    <script src="js/ranges.js"></script>
+    <script src="js/loadfile.js"></script>
+    <script src="js/addDragEvents.js"></script>
+    <script src="js/debugShorthand.js"></script>
 </body>
 </html>
