fix: modified #menuShare

--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
 
         <div id="menu-share" class="menu ease-p3 menu-hide">
             <ul id="ulShare">
-                <li><span class="icon icon-cloud_queue"></span>
-                            <span class="btn-shareToYun btn">分享到云音乐</span></li>
-                <li><span class="icon icon-mail_outline"></span>
-                            <span class="btn btn-shareToMsg">私信分享</span></li>
+                <li><span class="icon icon-mark-github"></span>
+                            <a class="btn-goGithub btn" href="https://github.com/Jonham/jh-lrc" target="_blank">查看GitHub主页</a></li>
+                <li><span class="icon icon-repo-forked"></span>
+                            <a class="btn-goFork btn" href="https://github.com/Jonham/jh-lrc" target="_blank">Fork Me</a></li>
                 <li><span class="icon-image icon-shareToTencent"></span>
                             <span class="btn btn-shareToTencent">微信、QQ分享</span></li>
                 <li><span class="icon-image icon-shareToYixin"></span>
