func: add NS.audio.visualizer.setSize( width, height)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- using ?xxxx to make browser update css file 1 -->
-    <link rel="stylesheet" href="style/ui.css?0003">
+    <link rel="stylesheet" href="style/ui.css">
     <link rel="stylesheet" href="style/fonts.css">
 </head>
 <body>
