func: add ToastObject and Toast; use Toast.log( msg, time) to display
Toast( msg: String, duration: Number|String )
duration: (mapped)
  'slow' : 5s
  'middle' : 3s
  'fast' : 1s

--- a/index.html
+++ b/index.html
@@ -334,6 +334,12 @@
                 <span class="btn">退出应用</span>
             </span>
         </div>
+
+        <div id="dConsole"></div>
+
+        <div class="center">
+            <div id="toastmessage" class="hidden"></div>
+        </div>
     </div>
 
 
