fix: remove some useless icons

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </nav>
 
                 <div id="volume" class='row ease-p6'>
-                    <span class="speaker layer-2"></span>
+                    <span class="icon-volume_up speaker layer-2"></span>
                     <div id="range-volume" class='range ease-p6 layer-2'>
                         <span class="range-fill"></span>
                         <span class="range-btn" style="left:100%"></span>
